set object-fit:cover for avatars to prevent weird stretching

--- a/src/pages/job-listing/job-listing.scss
+++ b/src/pages/job-listing/job-listing.scss
@@ -1,3 +1,7 @@
 page-job-listing {
 
+.item-md ion-avatar img {
+  object-fit: cover;
+}
+
 }
